<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="20dp"
    tools:context=".activities.SpeedThreshold">

    <LinearLayout
        android:id="@+id/linear_vehicle_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_number"
            android:textAllCaps="false"
            android:theme="@style/informativeText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_vehicle_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_vehicle_number"
            android:textAllCaps="false"
            android:theme="@style/dataText"
            android:paddingStart="10dp"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_vehicle_number">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_set_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top|center"
                android:text="@string/current_speed_heading"
                android:textAllCaps="false"
                android:theme="@style/informativeText" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_set_speed_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_current_speed_heading"
                android:textAllCaps="false"
                android:theme="@style/dataText"
                android:paddingStart="10dp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="261dp"
            android:layout_height="261dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circular_shape"
            android:indeterminate="false"
            android:max="100"
            android:progress="20"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:rotation="-90"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
            app:layout_constraintEnd_toEndOf="@+id/progress_bar"
            app:layout_constraintStart_toStartOf="@+id/progress_bar"
            app:layout_constraintTop_toTopOf="@+id/progress_bar">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_progress_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom|center"
                android:textAllCaps="false"
                android:textColor="@color/button_color"
                android:textSize="@dimen/threshold_size"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_progress_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top|center"
                android:textAllCaps="false"
                android:textColor="@color/violation_time_bg"
                android:textSize="@dimen/threshold_unit_size"
                android:textStyle="normal" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:enabled="false"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/reset_threshold"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/view_map"
        android:theme="@style/buttonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>